Added .NET and Windows Store implementation of Youless.NET library with authentication

--- a/src/YoulessNet/YoulessNet.net40/YoulessNet.net40.csproj
+++ b/src/YoulessNet/YoulessNet.net40/YoulessNet.net40.csproj
@@ -128,6 +128,7 @@
     <Compile Include="..\YoulessNet\YoulessStatus.cs">
       <Link>YoulessStatus.cs</Link>
     </Compile>
+    <Compile Include="Internal\YoulessAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
