--- a/src/YoulessNet/YoulessNet/YoulessNet.csproj
+++ b/src/YoulessNet/YoulessNet/YoulessNet.csproj
@@ -11,7 +11,6 @@
     <AssemblyName>YoulessNet</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,7 +41,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>YoulessNet-StrongKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-    <ItemGroup>
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -61,6 +60,8 @@
     <Compile Include="Internal\CoreAnnotations.cs" />
     <Compile Include="Internal\ITranslateable.cs" />
     <Compile Include="Internal\RawYoulessStatus.cs" />
+    <Compile Include="Internal\RawYoulessUsageData.cs" />
+    <Compile Include="UsageUnit.cs" />
     <Compile Include="YoulessConnectionStatus.cs" />
     <Compile Include="YoulessRequestInvoker.cs" />
     <Compile Include="Internal\ObjectUtils.cs" />
@@ -73,9 +74,10 @@
     <Compile Include="YoulessException.cs" />
     <Compile Include="YoulessServiceClient.cs" />
     <Compile Include="YoulessStatus.cs" />
+    <Compile Include="YoulessUsage.cs" />
+    <Compile Include="YoulessUsageData.cs" />
   </ItemGroup>
   <ItemGroup>
- 
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
