--- a/src/YoulessNet/YoulessNet.net40/YoulessNet.net40.csproj
+++ b/src/YoulessNet/YoulessNet.net40/YoulessNet.net40.csproj
@@ -149,6 +149,11 @@
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\YoulessNet\YoulessServiceClient.xml">
+      <Link>YoulessServiceClient.xml</Link>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
