--- a/src/YoulessNet/YoulessNet.winstore/YoulessNet.winstore.csproj
+++ b/src/YoulessNet/YoulessNet.winstore/YoulessNet.winstore.csproj
@@ -189,6 +189,11 @@
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\YoulessNet\YoulessServiceClient.xml">
+      <Link>YoulessServiceClient.xml</Link>
+    </None>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
